--- a/Client/src/app/components/technician/technician-card/technician-card.css
+++ b/Client/src/app/components/technician/technician-card/technician-card.css
@@ -11,6 +11,12 @@
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   transform: translateY(-2px);
 }
+.avatar-image{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
 
 /* Provider Avatar Section */
 .provider-avatar-section {
