--- a/Client/src/app/pages/technician/complete-profile/complete-profile.html
+++ b/Client/src/app/pages/technician/complete-profile/complete-profile.html
@@ -107,7 +107,7 @@
               <i class="bi bi-lightning"></i>
               <select formControlName="craftId">
                 <option [ngValue]="null" disabled>{{ 'CompleteProfile.Form.Fields.CraftPlaceholder' | translate }}</option>
-                <option *ngFor="let craft of crafts" [ngValue]="craft.id">{{ craft.name }}</option>
+                <option *ngFor="let craft of crafts" [ngValue]="craft.id">{{ (this._translate.currentLang === 'ar') ? craft.nameAr : craft.name}}</option>
               </select>
             </div>
             <small *ngIf="profileForm.get('craftId')?.invalid && profileForm.get('craftId')?.touched" class="error-text">{{ 'CompleteProfile.Form.Fields.CraftError' | translate }}</small>
