--- a/Client/src/app/pages/technician/portfolio/technician-portfolio.css
+++ b/Client/src/app/pages/technician/portfolio/technician-portfolio.css
@@ -214,7 +214,8 @@
 
 .cards-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  margin: 0 10px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 300px));
   gap: 1.25rem;
 }
 
